# dynomizer

./: .gitignore  README.md  pyproject.toml
dynamizer/: __init__.py  _models.py  mock.py
tests/: _utils.py  test_dynamizer.py  test_dynamizer_with_mock.py  test_mock.py  test_stream.py
tests/stream_scenarios/: creation.yaml  modify.yaml  remove.yaml
