[tool.poetry]
name = "dynamizer"
version = "0.1.0"
description = "Dynamodb model maker."
authors = ["Kevin Schiroo <kjschiroo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
test = "pytest --cov --cov-report=xml --cov-report=term-missing"